testdata/baselines/reference/submodule/conformance/nodeModulesExportsSourceTs(module=nodenext).errors.txt
index.ts(2,23): error TS2307: Cannot find module 'inner/other' or its corresponding type declarations.


==== index.ts (1 errors) ====
    // esm format file
    import { Thing } from "inner/other";
                          ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/other' or its corresponding type declarations.
    export const a = (await import("inner")).x();
    import {a as a2} from "package";
==== node_modules/inner/index.ts (0 errors) ====
    // esm format file
    export { x } from "./other.js";
==== node_modules/inner/other.ts (0 errors) ====
    // esm format file
    export interface Thing {}
    export const x: () => Thing = null as any;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.ts"
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "type": "module",
        "exports": "./index.ts"
    }